<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_buttons"
        >

        <Spinner
            android:id="@+id/subject_selector"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"
            android:paddingEnd="27dp"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:background="@drawable/selector_dropdown"
            android:text="@string/o_groups"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/date_picker"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/date_chose"
            android:background="@drawable/btn_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_below="@+id/header_buttons"/>
    <TextView
        android:id="@id/group_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_in"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/date_text_view"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        android:id="@+id/list_students"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/group_text_view"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/add_data"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_header"
        android:gravity="center"
        android:text="@string/add_data"
        android:layout_below="@+id/list_students"/>
    <Button
        android:id="@+id/graph"
        android:layout_marginTop="5dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_header"
        android:gravity="center"
        android:text="@string/show_data"
        android:layout_below="@+id/add_data"/>


</RelativeLayout>