<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLogin">


    <Button
        android:id="@+id/lose_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/btn_header"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:text="@string/action_getpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_header"
        android:text="@string/action_login"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_role" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/et_custom"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimaryUltraDark"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="5dp"
        android:padding="15dp"
        android:textColor="@color/colorPrimaryUltraDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/et_custom"

        android:hint="@string/password"
        android:textColorHint="@color/colorPrimaryUltraDark"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/colorPrimaryUltraDark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/user_role"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/app_nick"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/user_role"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:popupBackground="@color/colorPrimaryLight"
        android:background="@drawable/selector_dropdown"
        app:layout_constraintTop_toTopOf="parent" android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:freezesText="true"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lose_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>