<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout

            android:id="@+id/flexboxLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity ="center|start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:text="@string/stud_FIO_text"
                android:textSize="16sp"
                app:layout_constraintWidth_min="wrap"/>

            <EditText
                android:id="@+id/editFIO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:text=""
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexboxLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:flexWrap="wrap"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flexboxLayout2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp">
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"

                    android:text="@string/stud_email_text"
                    android:textSize="16sp"
                    app:layout_constraintWidth_min="wrap" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:gravity="top"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/stud_phone_text"
                    android:textSize="16sp"
                    app:layout_constraintWidth_min="wrap" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="16sp"
                    android:gravity="top"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flexboxLayout">

            <TextView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name_text"
                android:textSize="16sp"
                app:layout_constraintWidth_min="wrap" />

            <EditText
                android:id="@+id/editGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_text"
                android:textSize="16sp"
                app:layout_constraintWidth_min="wrap" />

            <EditText
                android:id="@+id/editYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/bad_attendance_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad_attendance_count_label"
                android:textSize="16sp"
                app:layout_constraintWidth_min="wrap" />

            <TextView
                android:id="@+id/textAttendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="none"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <Button
                android:id="@+id/update_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_header"
                android:padding="5dp"
                android:text="@string/add_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/delete_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_header"
                android:padding="5dp"
                android:text="@string/delete_data"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/update_info"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/file_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/stud_file_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/send_data"
            app:layout_constraintVertical_bias="0.11"
            tools:layout_editor_absoluteX="13dp" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/file_label"
            app:layout_constraintVertical_bias="0.412"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/send_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_header"
            android:padding="5dp"
            android:text="@string/add_file"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.077" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>